# ACDC_Optim

./: .gitignore  LICENSE  README.md  pyproject.toml
Notes/: ACDC optim_notes.md
examples/: ACDC_static_shim.ipynb
src/ACDC_Optim/: ACDC_optimization.py  __init__.py
