[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ACDC_Optim"
version = "0.1.0"
description = "Optimal shim-coil current computation for B₀ field inhomogeneity cancellation"
readme = "README.md"
license = "MIT"
authors = [
    {name = "MGH ACDC Team"},
]
keywords = ["MRI", "B0-shimming", "shim-coils", "optimization", "FISTA", "quadratic-programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "quadprog>=0.1.11",
    "tqdm>=4.60",
    "joblib>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.urls]
Homepage = "https://github.com/MGH-ACDC/ACDC_Optim"
Repository = "https://github.com/MGH-ACDC/ACDC_Optim"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
